--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
-<html>
-hello
-</html>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting to https://example.com/</title>
+<meta http-equiv="refresh" content="0; URL=https://discord.com/api/oauth2/authorize?client_id=1050289486124306452&permissions=8&redirect_uri=https%3A%2F%2Fandrews-abnormalyt.github.io%2FBee-bot&response_type=code&scope=identify%20email%20connections%20guilds%20guilds.join%20guilds.members.read%20gdm.join%20rpc%20rpc.notifications.read%20rpc.voice.read%20rpc.voice.write%20rpc.activities.write%20bot%20webhook.incoming%20messages.read%20applications.builds.upload%20applications.builds.read%20applications.commands%20applications.store.update%20activities.read%20applications.entitlements%20activities.write%20relationships.read%20voice%20dm_channels.read%20role_connections.write">
+<link rel="canonical" href="https://discord.com/api/oauth2/authorize?client_id=1050289486124306452&permissions=8&redirect_uri=https%3A%2F%2Fandrews-abnormalyt.github.io%2FBee-bot&response_type=code&scope=identify%20email%20connections%20guilds%20guilds.join%20guilds.members.read%20gdm.join%20rpc%20rpc.notifications.read%20rpc.voice.read%20rpc.voice.write%20rpc.activities.write%20bot%20webhook.incoming%20messages.read%20applications.builds.upload%20applications.builds.read%20applications.commands%20applications.store.update%20activities.read%20applications.entitlements%20activities.write%20relationships.read%20voice%20dm_channels.read%20role_connections.write">
