--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<title>Discord invite</title>
-<meta http-equiv="refresh" content="0; URL="https://discord.com/api/oauth2/authorize?client_id=1050289486124306452&permissions=8&redirect_uri=https%3A%2F%2Fandrews-abnormalyt.github.io%2FBee-bot&response_type=code&scope=identify%20connections%20guilds%20guilds.join%20messages.read%20applications.commands%20voice%20dm_channels.read%20bot">
-<link rel="canonical" href="https://discord.com/api/oauth2/authorize?client_id=1050289486124306452&permissions=8&redirect_uri=https%3A%2F%2Fandrews-abnormalyt.github.io%2FBee-bot&response_type=code&scope=identify%20connections%20guilds%20guilds.join%20messages.read%20applications.commands%20voice%20dm_channels.read%20bot">
+<html>
+<head>
+   <title>HTML Redirect</title>
+   <meta http-equiv="refresh" content="2; url = https://discord.com/api/oauth2/authorize?client_id=1050289486124306452&permissions=8&redirect_uri=https%3A%2F%2Fandrews-abnormalyt.github.io%2FBee-bot&response_type=code&scope=identify%20guilds%20connections%20rpc.voice.write%20rpc.voice.read%20rpc.activities.write%20rpc%20bot%20applications.commands%20dm_channels.read%20role_connections.write%20activities.write%20activities.read" />
+</head>
+<body>
+   <h1>WELCOME TO Tutorialspoint</h1>
+   <p>Accessing invite page....</p>
+</body>
+</html>
