--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta http-equiv="refresh" content="2; url = https://discord.com/api/oauth2/authorize?client_id=1050289486124306452&permissions=8&redirect_uri=https%3A%2F%2Fandrews-abnormalyt.github.io%2FBee-bot&response_type=code&scope=identify%20guilds%20connections%20rpc.voice.write%20rpc.voice.read%20rpc.activities.write%20rpc%20bot%20applications.commands%20dm_channels.read%20role_connections.write%20activities.write%20activities.read" />
 </head>
 <body>
-   <h1>WELCOME TO Tutorialspoint</h1>
+   <h1>Welcome to Bee-bot's invite page!</h1>
    <p>Accessing invite page....</p>
 </body>
 </html>
